Fix hide scrollbar in firefox

--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@ html,body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textar
 }
 body {
     background-color: black;
-    position: fixed; 
-    overflow-y: scroll;
+    position: fixed;
+    overflow: hidden;
 }
 .am-wrapper {
     float: left;
@@ -15,6 +15,9 @@ body {
 .am-wrapper img {
     position: absolute;
     outline: none;
+}
+.am-container {
+    overflow: hidden;
 }
 .container {
     overflow: hidden;
